# browse-core

./: DEPS  README.md  package.json
browser/: BUILD.gn  brave_content_browser_client.cc  brave_content_browser_client.h
browser/brave_ads/notifications/: platform_bridge.cc
browser/brave_rewards/: checkout_dialog.cc  checkout_dialog.h
browser/ephemeral_storage/: ephemeral_storage_tab_helper.cc  ephemeral_storage_tab_helper.h
browser/farbling/: brave_navigator_useragent_farbling_browsertest.cc
browser/net/: brave_ad_block_tp_network_delegate_helper.cc
browser/permissions/: chrome_permission_origin_lifetime_monitor.cc  chrome_permission_origin_lifetime_monitor.h  permission_lifetime_manager_factory.cc  sources.gni
browser/ui/: BUILD.gn
browser/ui/webui/: brave_checkout_ui.cc
chromium_src/chrome/browser/: about_flags.cc
chromium_src/components/permissions/: permission_context_base.cc
chromium_src/content/browser/: tld_ephemeral_lifetime.cc
components/brave_ads/browser/: ad_notification.cc  ad_notification.h  ads_notification_handler.cc  ads_service_impl.cc  ads_service_impl.h
components/brave_ads/test/: BUILD.gn
components/brave_rewards/common/: constants.cc  (+1 more)
components/brave_wallet/: hd_key.cc  hd_key.h  hd_key_unittest.cc
components/permissions/: BUILD.gn  permission_lifetime_manager.cc  permission_lifetime_manager.h  permission_origin_lifetime_monitor.h
renderer/: brave_content_renderer_client.cc
test/: BUILD.gn
ui/brave_ads/: BUILD.gn  ad_notification_view.cc  ad_notification_view.h  notification_background_painter.cc  notification_background_painter.h  notification_control_buttons_view.cc  notification_control_buttons_view.h  notification_header_view.cc  notification_header_view.h  notification_popup.cc  notification_popup.h  notification_popup_mac.mm  notification_popup_win.cc  notification_view.cc  notification_view.h  notification_view_factory.h  padded_image_button.cc  padded_image_button.h  padded_image_view.cc  padded_image_view.h
ui/brave_ads/public/cpp/: BUILD.gn  constants.h  notification.cc  notification.h  notification_delegate.h
(+25 files in other folders)
