# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//testing/test.gni")
import("//ui/base/ui_features.gni")

source_set("brave_ads") {
  if (is_win || is_linux || is_mac) {
    deps = [
      "//base",
      "//ui/base",
      "//ui/strings",
    ]

    deps += [
      "//brave/app/theme:brave_theme_resources",
      "//brave/app/theme:brave_unscaled_resources",
      "//brave/app/vector_icons",
      "//brave/ui/brave_ads/public/cpp",
      "//skia",
      "//ui/accessibility",
      "//ui/display",
      "//ui/events",
      "//ui/gfx",
      "//ui/gfx/geometry",
      "//ui/native_theme",
    ]

    if (is_win) {
      deps += [
        "//ui/aura",
        "//ui/wm/public",
      ]
    }

    sources = [
      "ad_notification_view.cc",
      "ad_notification_view.h",
      "notification_background_painter.cc",
      "notification_background_painter.h",
      "notification_control_buttons_view.cc",
      "notification_control_buttons_view.h",
      "notification_header_view.cc",
      "notification_header_view.h",
      "notification_popup.cc",
      "notification_popup.h",
      "notification_view.cc",
      "notification_view.h",
      "notification_view_factory.cc",
      "notification_view_factory.h",
      "padded_image_button.cc",
      "padded_image_button.h",
      "padded_image_view.cc",
      "padded_image_view.h",
    ]

    if (is_mac) {
      sources += [ "notification_popup_mac.mm" ]
    }

    if (is_win) {
      sources += [ "notification_popup_win.cc" ]
    }

    deps += [
      "//ui/compositor",
      "//ui/events",
      "//ui/views",
    ]
  }

  if (is_mac) {
    frameworks = [
      "AppKit.framework",
      "Foundation.framework",
    ]
  }
}
